--- a/templates/cisco-ios.j2
+++ b/templates/cisco-ios.j2
@@ -1,3 +1,3 @@
 hostname {{hostname}}
 
-{% include platform.slug ~ '/interface.j2' %}
+{% include 'templates/' ~ platform.slug ~ '/interface.j2' %}
