corrected banners path

--- a/templates/cisco-ios.j2
+++ b/templates/cisco-ios.j2
@@ -2,7 +2,7 @@ hostname {{hostname}}
 
 {% include 'templates/' ~ platform.slug ~ '/interface.j2' %}
 
-{% for banner in banners %}
+{% for banner in config_context.banners %}
 {% for key,value in banner.items() %}
 banner {{key}} ^
 {{value}}
