--- a/templates/cisco-ios/interface.j2
+++ b/templates/cisco-ios/interface.j2
@@ -3,7 +3,7 @@ interface {{interface.name}}
 {% if interface.description != '' %}
  description {{interface.description}}
 {% else %}
- description to {{ inteface.connected_interface.device.name }} {{ interface.connected_interface.name }}
+ description to {{ interface.connected_interface.device.name }} {{ interface.connected_interface.name }}
 {% endif %}
 {% if interface.enabled %}
  no shutdown
