--- a/templates/cisco-ios/interface.j2
+++ b/templates/cisco-ios/interface.j2
@@ -2,7 +2,7 @@
 interface {{interface.name}}
 {% if interface.description != '' %}
  description {{interface.description}}
-{% elif connected_interface  %}
+{% elif interface.connected_interface is not none  %}
  description to {{ interface.connected_interface.device.name }} {{ interface.connected_interface.name }}
 {% endif %}
 {% if interface.enabled %}
