--- a/templates/cisco-ios.j2
+++ b/templates/cisco-ios.j2
@@ -26,6 +26,8 @@ ip dhcp bootp ignore
 !
 {% include 'templates/' ~ platform.slug ~ '/acl.j2' %}
 !
+{% include 'templates/' ~ platform.slug ~ '/ntp.j2' %}
+!
 {% for banner in config_context.banners %}
 {% for key,value in banner.items() %}
 banner {{key}} ^
