--- a/templates/cisco-ios.j2
+++ b/templates/cisco-ios.j2
@@ -31,13 +31,13 @@ ip ftp source-interface {{ primary_ip4.interface.name }}
 !
 {% include 'templates/' ~ platform.slug ~ '/interface.j2' %}
 !
-
+{% include 'templates/' ~ platform.slug ~ '/acl.j2' %}
 !
 {% include 'templates/' ~ platform.slug ~ '/ntp.j2' %}
 !
 {% include 'templates/' ~ platform.slug ~ '/logging.j2' %}
 !
-{% include 'templates/' ~ platform.slug ~ '/snmp.j2' %}
+
 !
 {% for banner in config_context.banners %}
 {% for key,value in banner.items() %}
