--- a/templates/cisco-ios/interface.j2
+++ b/templates/cisco-ios/interface.j2
@@ -24,7 +24,7 @@ interface {{interface.name}}
 {% endif %}
  logging event link-status
 
-{% if interface._custom_field_data.access_list | type != 'None' %}
+{% if interface._custom_field_data.access_list == none %}
  ip access-group {{ interface._custom_field_data.access_list.id }} {{ interface._custom_field_data.access_list.direction }}
 {%endif%}
 !
