remove cidr on bgp

--- a/templates/cisco-ios/bgp.j2
+++ b/templates/cisco-ios/bgp.j2
@@ -3,7 +3,7 @@ router bgp {{bgp.autonomous_system.asn}}
  bgp router-id {{bgp.router_id.address | address }}
 {% for nbr in bgp.autonomous_system.endpoints %}
 {% if nbr.peer.routing_instance.id != bgp.id %}
- neighbor {{nbr.peer.source_interface.ip_addresses[0].address}} remote-as {{nbr.peer.autonomous_system.asn}}
+ neighbor {{nbr.peer.source_interface.ip_addresses[0].address | address }} remote-as {{nbr.peer.autonomous_system.asn}}
 {% endif %}
 {% endfor %}
 {% endfor %}
